Commentaire...:
	Travail sur le typage des hexagones pour qu'une fourmis sache où elle est et ce qu'elle a devant elle
		- Sauvegarde du type de terrain appliqué dans l'hexagone
		- Améliorations API : possibilité de savoir où est une fourmis ayant le DeplacementsFourmisScripts;

__________________________________

Numero........:  26;
Date..........:  05/11/2014 00h17;
Auteur........:  py;
Commentaire...:
    ლ(o◡oლ)﻿﻿
	Travail sur les hexagones :
		- Corrections de leurs positions locales avec des offsets pour tout centrer nickel
		- Methode de debug pour placer un objet à chaque hexagone afin d'avoir un débogage visuel
		- Ajouts d'objets de debugs

__________________________________

Numero........:  27;
Date..........:  05/11/2014 18h15;
Auteur........:  py;
Commentaire...:
	\(-ㅂ-)/ 
	Travail sur la détection de l'eau
		- Bug corrigé : la direction du rayon était incorrecte, maintant le rayon de détection est OK
		- Maintenant les fourmis détectent l'eau
		- Les gameobjects des cases d'eau ont un rendu visuel

__________________________________

Numero........:  28;
Date..........:  06/11/2014 09h49;
Auteur........:  py;
Commentaire...:
	Travail sur la récupération de coordonnées 3D locales via un clic 2D
		- Création du dossier Interactions dans le dossier Script pour tous les scripts
		(clic, drag, ...)
		- Ajout d'une nouvelle scene de debug pour les clics
		- Maintenant un clic repère un hexagone;

__________________________________

Numero........:  ??;
Date..........:  ??/??/2014 ??h??;
Auteur........:  py;
Commentaire...:
	;

__________________________________

Numero........:  ??;
Date..........:  ??/??/2014 ??h??;
Auteur........:  py;
Commentaire...:
	;

__________________________________

Numero........:  ??;
Date..........:  ??/??/2014 ??h??;
Auteur........:  py;
Commentaire...:
	;

__________________________________

Numero........:  ??;
Date..........:  ??/??/2014 ??h??;
Auteur........:  py;
Commentaire...:
	;

__________________________________