@@ -7,7 +7,7 @@
 /// http://mteys.com/detection-des-clics-sur-les-objets-unity/
 /// </remarks>
 /// <remarks>
-/// PY Lapersonne - Version 1.0.0
+/// PY Lapersonne - Version 1.1.0
 /// </remarks>
 
 using UnityEngine;
@@ -24,6 +24,40 @@ public class PointAndClickScript : MonoBehaviour {
 	/* ********* *
 	 * Attributs *
 	 * ********* */
+
+#region Attributs
+	/// <summary>
+	/// Flag mettant un hexagone dans une couleur différente
+	/// s'il est clické
+	/// </summary>
+	public bool modeCouleurClick;
+
+	/// <summary>
+	/// Flag mettant un hexagone dans une couleur différente
+	/// s'il est survolé
+	/// </summary>
+	public bool modeCouleurSurvol;
+
+	/// <summary>
+	/// Flag indiquant que l'on gère le survol de la souris
+	/// </summary>
+	public bool modeSurvol;
+
+	/// <summary>
+	/// Flag indiquant que l'on gère el click de la souris
+	/// </summary>
+	public bool modeClick;
+
+	/// <summary>
+	/// La texture à appliquer en cas de survol d'un hexagone
+	/// </summary>
+	public Texture textureSurvol;
+
+	/// <summary>
+	/// La texture à appliquer en cas de click sur un hexagone
+	/// </summary>
+	public Texture textureClikc;
+#endregion
 
 #region Constantes
 	/// <summary>
@@ -47,7 +81,9 @@ public class PointAndClickScript : MonoBehaviour {
 #region Méthodes privées
 	/// <summary>
 	/// Méthode pour détecter le click de l'utilisateur et pour convertir ces coordonnées
-	/// x/y en coordonnées x/y/z locales au terrain
+	/// x/y en coordonnées x/y/z locales au terrain.
+	/// Pour cela, va récupérer la position de la souris, puis va récupérer le plan du sol.
+	/// Puis va lancer un rayon avec ce sol.
 	/// </summary>
 	private void DetecterClick(){
 		if ( Input.GetMouseButtonDown(CLIC_DROIT_SOURIS) ){
@@ -56,12 +92,50 @@ public class PointAndClickScript : MonoBehaviour {
 			Plane planDuSol = new Plane(Vector3.up, transform.position);
 			if ( planDuSol.Raycast(rayon, out distance) ){ 
 				Vector3 pointImpact = rayon.GetPoint(distance);
-				Debug.Log("Coordonnées de la souris sur le plan  = " + pointImpact );
+				//Debug.Log("Coordonnées de la souris sur le plan  = " + pointImpact );
 				Vector3 coordLocales = transform.worldToLocalMatrix.MultiplyPoint(pointImpact);
-				Debug.Log("Coordonnées locales p/r au terrain = " + coordLocales );
-				HexagoneInfo hexagoneCLick = TerrainUtils.HexagonePlusProche(coordLocales);
-				Debug.Log("Hexagone le plus proche du clic = " + hexagoneCLick.positionLocaleSurTerrain );
+				//Debug.Log("Coordonnées locales p/r au terrain = " + coordLocales );
+				HexagoneInfo hexagoneClick = TerrainUtils.HexagonePlusProche(coordLocales);
+				Debug.Log("Hexagone le plus proche du clic = " + hexagoneClick.positionLocaleSurTerrain );
+				/*
+				if ( modeCouleurClick ){
+					// FIXME Prendre un truc moins dégueulasse
+					GameObject bacAsable = GameObject.Find("Bac à sable");
+					if ( bacAsable == null ) Debug.LogError("BOUM");
+					InvocateurObjetsScript scriptInvoc = bacAsable.GetComponent<InvocateurObjetsScript>();
+					scriptInvoc.InvoquerObjet(Invocations.DEBUG_OBJECT, hexagoneClick.positionLocaleSurTerrain);
+				}
+				*/
 			}
+		}
+	}
+
+	/// <summary>
+	/// Méthode pour détecter le survol de la souris pour convertir ces coordonnées
+	/// x/y en coordonnées x/y/z locales au terrain.
+	/// Pour cela, va récupérer la position de la souris, puis va récupérer le plan du sol.
+	/// Puis va lancer un rayon avec ce sol.
+	/// </summary>
+	private void DetecterSurvol(){
+		Ray rayon = Camera.main.ScreenPointToRay(Input.mousePosition); 
+		float distance;
+		Plane planDuSol = new Plane(Vector3.up, transform.position);
+		if ( planDuSol.Raycast(rayon, out distance) ){ 
+			Vector3 pointImpact = rayon.GetPoint(distance);
+			//Debug.Log("Coordonnées de la souris sur le plan  = " + pointImpact );
+			Vector3 coordLocales = transform.worldToLocalMatrix.MultiplyPoint(pointImpact);
+			//Debug.Log("Coordonnées locales p/r au terrain = " + coordLocales );
+			HexagoneInfo hexagoneClick = TerrainUtils.HexagonePlusProche(coordLocales);
+			Debug.Log("Hexagone le plus proche du clic = " + hexagoneClick.positionLocaleSurTerrain );
+			/*
+			if ( modeCouleurSurvol ){
+				// FIXME Prendre un truc moins dégueulasse
+				GameObject bacAsable = GameObject.Find("Bac à sable");
+				if ( bacAsable == null ) Debug.LogError("BOUM");
+				InvocateurObjetsScript scriptInvoc = bacAsable.GetComponent<InvocateurObjetsScript>();
+				scriptInvoc.InvoquerObjet(Invocations.DEBUG_OBJECT, hexagoneClick.positionLocaleSurTerrain);
+			}
+			*/
 		}
 	}
 #endregion
@@ -72,7 +146,8 @@ public class PointAndClickScript : MonoBehaviour {
 	/// Routine appellée automatiquement par Unity au lancement du script
 	/// </summary>
 	void Update(){
-		DetecterClick();
+		if ( modeClick ) DetecterClick();
+		if ( modeSurvol ) DetecterSurvol();
 	}
 #endregion
 
